UMAP MNMG benchmark update

--- a/umap_mnmg_benchmark.ipynb
+++ b/umap_mnmg_benchmark.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,13 +36,17 @@
     "    # Generate dataset\n",
     "    X, y = make_blobs(n_samples=args['n_samples'], n_features=args['n_features'],\n",
     "                      centers=args['centers'])\n",
+    "    \n",
     "    # Number of samples for local train\n",
     "    n_sampling = int(args['n_samples'] * args['sampling_ratio'])\n",
-    "    # Number of samples per partition\n",
-    "    n_samples_per_part = int(args['n_samples'] / args['n_parts'])\n",
+    "    \n",
     "    # Generate local train data\n",
     "    selection = np.random.choice(args['n_samples'], n_sampling)\n",
     "    lX = X[selection]\n",
+    "    \n",
+    "    # Number of samples per partition\n",
+    "    n_samples_per_part = int(args['n_samples'] / args['n_parts'])\n",
+    "    \n",
     "    # Generate partitioning of distributed data for inference\n",
     "    chunks = [n_samples_per_part] * args['n_parts']\n",
     "    chunks[-1] += args['n_samples'] % n_samples_per_part\n",
@@ -60,18 +64,28 @@
     "    durations = []\n",
     "    trust_scores = []\n",
     "    for i in range(args['n_iter']):\n",
+    "        \n",
+    "        # Train local model\n",
     "        local_model = UMAP(n_components=2, n_neighbors=args['n_neighbors'],\n",
     "                       n_epochs=args['n_epochs'], random_state=args['random_state'])\n",
     "        local_model.fit(lX)\n",
+    "        \n",
+    "        # Pass trained model and order distributed inference\n",
     "        model = UMAP_MNMG(local_model)\n",
     "        lazy_transformed = model.transform(dX)\n",
+    "        \n",
+    "        # Perform distributed inference and measure time\n",
     "        start = time.time()\n",
     "        transformed = lazy_transformed.compute()\n",
     "        durations.append(time.time()-start)\n",
+    "        \n",
+    "        # Compute trustworthiness score\n",
     "        trust_scores.append(trustworthiness(X, transformed, n_neighbors=args['n_neighbors']))\n",
+    "        \n",
     "    durations = np.array(durations)\n",
     "    trust_scores = np.array(trust_scores)\n",
     "    \n",
+    "    # Return runtime average and variance as well as trustworthiness score average\n",
     "    return durations.mean(), durations.var(), trust_scores.mean()"
    ]
   },
@@ -108,7 +122,7 @@
     "client = Client(cluster)\n",
     "\n",
     "# Comparing runtime and trustworthiness with different number of partitions, number of samples and ratio of local train\n",
-    "for n_parts in [8]:\n",
+    "for n_parts in [3, 8]:\n",
     "    for n_samples in [100000, 500000, 1000000]:\n",
     "        for sampling_ratio in [0.001,0.005]:\n",
     "            args['n_parts'] = n_parts\n",
